assets/css/style.css
h1 {
  text-align: center;
  font-family: 'Playfair Display SC', serif;
}


.card {
  margin-bottom: 15px;
}



@media 
only screen and (max-width: 760px),
(min-device-width: 768px) and (max-device-width: 900px)  {

	table, thead, tbody, th, td, tr { 
		display: block; 
	}
	#new {
		padding: 20px;
	}
	thead tr { 
		position: absolute;
		top: -9999px;
		left: -9999px;
	}
	
	tr { border: 1px solid #ccc; }
	
	td { 
		/* Behave  like a "row" */
		border: none;
		border-bottom: 1px solid #eee; 
		position: relative;
	
	}

	.margin {
		text-align: right;
		margin-bottom: 10px;
	}

	td:before { 
		/* Now like a table header */
		position: absolute;
		/* Top/left values mimic padding */
		top: 10px;
		left: 6px;
		width: 45%; 
		padding-right: 10px; 
		white-space: nowrap;
		font-weight: bold;
		text-align: left;
	}

	td:nth-of-type(1):before { content: "Train:"; }
	td:nth-of-type(2):before { content: "Destination:"; }
	td:nth-of-type(3):before { content: "Frequency:"; }
	td:nth-of-type(4):before { content: "Arrival Time:"; }
	td:nth-of-type(5):before { content: "Minutes Away:"; }

}

